Encode frames in full color range

FFmpeg assumes full color range when decoding by default, even though
the encoding default is limited range. This leads to color issues in
clients. To work around that, request encoding to be performed in full
color range.

BUG: 507015